--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
     </main>
 
-    <footer>Creador: DogRebel.</footer>
+    <footer>Creador: Carlos Andrés Valenzuela GarcíaG5</footer>
   </body>
 
   <script src="script.js"></script>
